--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "mongoose": "^6.2.3",
-    "next": "12.1.0",
+    "next": "^12.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "semantic-ui-react": "^2.1.2",
